# basic-calculator-rust

./: Cargo.toml  README.md
src/: download.rs  iced_gui_main.rs  main.rs
src/parser/: ast.rs  lexer.rs  mod.rs  token.rs
